tests/NormalTests/paczka1/fuzzy1/87314142.err
Error in line 2: FUe1tGyry A34 1,1
Error in line 4: 2QaNr8xm Au4 48,6
Error in line 7: nlgZ574Yv A34 134,73
Error in line 3: FUe1tGyry S420 13,3
Error in line 16: JTUc S420 3,4
Error in line 18: S211 A34 48,0
Error in line 21: 2QaNr8xm A34 37,0
Error in line 26: 2QaNr8xm S211 57,0
Error in line 6: nlgZ574Yv A34 46,8
Error in line 31: 2QaNr8xm A34 16,0
